welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    for (i <-0 to diag)
    ^Diagonal:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    {
    ^Diagonal:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return compteur
    ^